anasin.output
State 3 conflicts: 1 shift/reduce
State 6 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: terms

    2 terms: term terms
    3      | term

    4 term: abs
    5     | app
    6     | PARE term PARD

    7 abs: LAMBDA LETTER PONTO terms

    8 app: LETTER
    9    | LETTER app


Terminals, with rules where they appear

$end (0) 0
error (256)
LAMBDA (258) 7
PONTO (259) 7
PARE (260) 6
PARD (261) 6
LETTER (262) 7 8 9


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
program (9)
    on left: 1, on right: 0
terms (10)
    on left: 2 3, on right: 1 2 7
term (11)
    on left: 4 5 6, on right: 2 3 6
abs (12)
    on left: 7, on right: 4
app (13)
    on left: 8 9, on right: 5 9


State 0

    0 $accept: . program $end

    LAMBDA  shift, and go to state 1
    PARE    shift, and go to state 2
    LETTER  shift, and go to state 3

    program  go to state 4
    terms    go to state 5
    term     go to state 6
    abs      go to state 7
    app      go to state 8


State 1

    7 abs: LAMBDA . LETTER PONTO terms

    LETTER  shift, and go to state 9


State 2

    6 term: PARE . term PARD

    LAMBDA  shift, and go to state 1
    PARE    shift, and go to state 2
    LETTER  shift, and go to state 3

    term  go to state 10
    abs   go to state 7
    app   go to state 8


State 3

    8 app: LETTER .
    9    | LETTER . app

    LETTER  shift, and go to state 3

    LETTER    [reduce using rule 8 (app)]
    $default  reduce using rule 8 (app)

    app  go to state 11


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: terms .

    $default  reduce using rule 1 (program)


State 6

    2 terms: term . terms
    3      | term .

    LAMBDA  shift, and go to state 1
    PARE    shift, and go to state 2
    LETTER  shift, and go to state 3

    LAMBDA    [reduce using rule 3 (terms)]
    PARE      [reduce using rule 3 (terms)]
    LETTER    [reduce using rule 3 (terms)]
    $default  reduce using rule 3 (terms)

    terms  go to state 13
    term   go to state 6
    abs    go to state 7
    app    go to state 8


State 7

    4 term: abs .

    $default  reduce using rule 4 (term)


State 8

    5 term: app .

    $default  reduce using rule 5 (term)


State 9

    7 abs: LAMBDA LETTER . PONTO terms

    PONTO  shift, and go to state 14


State 10

    6 term: PARE term . PARD

    PARD  shift, and go to state 15


State 11

    9 app: LETTER app .

    $default  reduce using rule 9 (app)


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 terms: term terms .

    $default  reduce using rule 2 (terms)


State 14

    7 abs: LAMBDA LETTER PONTO . terms

    LAMBDA  shift, and go to state 1
    PARE    shift, and go to state 2
    LETTER  shift, and go to state 3

    terms  go to state 16
    term   go to state 6
    abs    go to state 7
    app    go to state 8


State 15

    6 term: PARE term PARD .

    $default  reduce using rule 6 (term)


State 16

    7 abs: LAMBDA LETTER PONTO terms .

    $default  reduce using rule 7 (abs)
